--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+.article-principal{
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+  margin-top: 3%;
+  
+}
+body{
+  background-color: beige;
+}
