--- a/front-end/src/components/Formulario/style.css
+++ b/front-end/src/components/Formulario/style.css
@@ -5,3 +5,12 @@
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
     margin-top: 3%;
 }
+.sucess{
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3); 
+    float:right;
+    margin-right: 8%;
+    margin-top:3%;
+    background-color:greenyellow;
+    width: 200px;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1);
+}
