--- a/front-end/src/components/Register/style.css
+++ b/front-end/src/components/Register/style.css
@@ -3,9 +3,13 @@
 }
 .btn{
     float:right;
+    padding: 4px 10px;
 }
 #data-cadastro{
     float: right;
     font-size:large;
     font-weight: bold;
+}
+#link-edit{
+    padding: 4px 10px;
 }
