--- a/front-end/src/components/Formulario/style.css
+++ b/front-end/src/components/Formulario/style.css
@@ -4,6 +4,7 @@
 #container-cadastro{
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
     margin-top: 3%;
+    width: 60%;
 }
 .sucess{
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.3); 
@@ -14,3 +15,4 @@
     width: 200px;
     transition: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
+
