--- a/front-end/src/components/Login/style.css
+++ b/front-end/src/components/Login/style.css
@@ -54,3 +54,10 @@
 #check-remember{
   color:white
 }
+
+#button-create{
+  background-color: white;
+  color: black;
+  border-radius: 15px;
+  margin-top:2%;
+}
