--- a/front-end/src/components/Formulario/cadastro-produto.css
+++ b/front-end/src/components/Formulario/cadastro-produto.css
@@ -1,47 +1,74 @@
-input[type="file"]{
-    visibility: hidden;
+input[type="file"] {
+  visibility: hidden;
 }
 
-#container-img .new-image{
-    float: left;
-    height: 96px;
-    background: #F5F8FA;
-    border: 1px dashed #96D2F0;
-    border-radius: 20px;
-    cursor: pointer;
-    max-width: 96px;
-    display:flex;
-    justify-content: center;
-    align-items: center;
+#container-img .new-image {
+  float: left;
+  height: 96px;
+  background: #f5f8fa;
+  border: 1px dashed #96d2f0;
+  border-radius: 20px;
+  cursor: pointer;
+  max-width: 96px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #container-img {
-    display: grid;
-    grid-template-columns: repeat(5,1fr);
-    grid-gap: 16px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 16px;
 }
-#container-img img{
+#container-img img {
+  width: 100%;
+  height: 96px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+#container-cadastro-produtos {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 20px;
+  padding-bottom: 5%;
+}
+
+#btn-submit-produtos {
+  margin-bottom: 5%;
+}
+
+.container-wraper {
+  position: relative;
+  width: 100%;
+  max-width: 400px;
+}
+.icon-style {
+    color: white;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+.product-image {
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
     width: 100%;
-    height: 96px;
-    object-fit: cover;
-    border-radius: 20px;
-}
+    opacity: 0;
+    transition: .3s ease;
+  }
 
-#container-cadastro-produtos{
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    border-radius: 20px;
-    padding-bottom: 5%;
-}
-
-#btn-submit-produtos{
-    margin-bottom: 5%;
-}
-
-.icon-style{
-    position: relative;
-    z-index: 1;
-}
-
-.container-wraper{
-    position: relative;
-    width: 195px;
-}
+  .container-wraper:hover .overlay {
+    opacity: 1;
+  }
+  
