--- a/front-end/src/components/Formulario/cadastro-produto.css
+++ b/front-end/src/components/Formulario/cadastro-produto.css
@@ -30,6 +30,7 @@ input[type="file"] {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   border-radius: 20px;
   padding-bottom: 5%;
+  margin-top: 2%;
 }
 
 #btn-submit-produtos {
@@ -62,10 +63,13 @@ input[type="file"] {
     bottom: 0;
     left: 0;
     right: 0;
-    height: 100%;
+    height: 96px;
     width: 100%;
     opacity: 0;
     transition: .3s ease;
+    background:rgba(255, 252, 252, 0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
   }
 
   .container-wraper:hover .overlay {
